MathExprParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 MathExpr.g 2013-11-18 23:27:45

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


  using System.Collections.Generic;
  using System.Globalization;


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;

using IDictionary	= System.Collections.IDictionary;
using Hashtable 	= System.Collections.Hashtable;

using Antlr.Runtime.Tree;

namespace  MathExpr 
{
public partial class MathExprParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"UNKNOWN", 
		"VAR", 
		"BLOCK", 
		"PROGRAM", 
		"FUNC_CALL", 
		"PARAMS", 
		"INC", 
		"DEC", 
		"FUNCTION", 
		"PROCEDURE", 
		"FOR", 
		"REPEAT", 
		"UNTIL", 
		"TO", 
		"DO", 
		"WHILE", 
		"IF", 
		"THEN", 
		"ELSE", 
		"DIV_INT", 
		"MOD_INT", 
		"AND", 
		"OR", 
		"CONVERT", 
		"XOR", 
		"DDD", 
		"TTT", 
		"WS", 
		"ML_COMMENT", 
		"INTEGER", 
		"REAL", 
		"STRING", 
		"IDENT", 
		"ADD", 
		"SUB", 
		"MUL", 
		"DIV", 
		"ASSIGN", 
		"COMPARE", 
		"'('", 
		"')'", 
		"','", 
		"'array'", 
		"'['", 
		"'..'", 
		"']'", 
		"'of'", 
		"'real'", 
		"'integer'", 
		"'string'", 
		"'begin'", 
		"'end'"
    };

    public const int FUNCTION = 12;
    public const int DEC = 11;
    public const int MOD_INT = 24;
    public const int WHILE = 19;
    public const int FOR = 14;
    public const int DO = 18;
    public const int SUB = 38;
    public const int TTT = 30;
    public const int AND = 25;
    public const int EOF = -1;
    public const int FUNC_CALL = 8;
    public const int IF = 20;
    public const int T__55 = 55;
    public const int ML_COMMENT = 32;
    public const int INC = 10;
    public const int T__51 = 51;
    public const int T__52 = 52;
    public const int THEN = 21;
    public const int T__53 = 53;
    public const int DDD = 29;
    public const int UNKNOWN = 4;
    public const int T__54 = 54;
    public const int COMPARE = 42;
    public const int IDENT = 36;
    public const int VAR = 5;
    public const int T__50 = 50;
    public const int ADD = 37;
    public const int PARAMS = 9;
    public const int INTEGER = 33;
    public const int T__43 = 43;
    public const int T__46 = 46;
    public const int XOR = 28;
    public const int T__47 = 47;
    public const int T__44 = 44;
    public const int T__45 = 45;
    public const int CONVERT = 27;
    public const int TO = 17;
    public const int T__48 = 48;
    public const int T__49 = 49;
    public const int DIV_INT = 23;
    public const int ELSE = 22;
    public const int MUL = 39;
    public const int PROCEDURE = 13;
    public const int REAL = 34;
    public const int WS = 31;
    public const int UNTIL = 16;
    public const int BLOCK = 6;
    public const int OR = 26;
    public const int ASSIGN = 41;
    public const int PROGRAM = 7;
    public const int REPEAT = 15;
    public const int DIV = 40;
    public const int STRING = 35;

    // delegates
    // delegators



        public MathExprParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public MathExprParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();
            this.state.ruleMemo = new Hashtable[69+1];
             
             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return MathExprParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "MathExpr.g"; }
    }


      // number format with decimal separator - '.'
      public static readonly NumberFormatInfo NFI = new NumberFormatInfo();
      
      // identifier values
      private Dictionary<string, IdentDescr> identTable = new Dictionary<string, IdentDescr>();


    public class group_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "group"
    // MathExpr.g:91:1: group : ( '(' term ')' | REAL -> REAL[double.Parse($REAL.text, NFI)] | INTEGER | STRING | func_call | IDENT );
    public MathExprParser.group_return group() // throws RecognitionException [1]
    {   
        MathExprParser.group_return retval = new MathExprParser.group_return();
        retval.Start = input.LT(1);
        int group_StartIndex = input.Index();
        object root_0 = null;

        IToken char_literal1 = null;
        IToken char_literal3 = null;
        IToken REAL4 = null;
        IToken INTEGER5 = null;
        IToken STRING6 = null;
        IToken IDENT8 = null;
        MathExprParser.term_return term2 = default(MathExprParser.term_return);

        MathExprParser.func_call_return func_call7 = default(MathExprParser.func_call_return);


        object char_literal1_tree=null;
        object char_literal3_tree=null;
        object REAL4_tree=null;
        object INTEGER5_tree=null;
        object STRING6_tree=null;
        object IDENT8_tree=null;
        RewriteRuleTokenStream stream_REAL = new RewriteRuleTokenStream(adaptor,"token REAL");

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 1) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:91:6: ( '(' term ')' | REAL -> REAL[double.Parse($REAL.text, NFI)] | INTEGER | STRING | func_call | IDENT )
            int alt1 = 6;
            switch ( input.LA(1) ) 
            {
            case 43:
            	{
                alt1 = 1;
                }
                break;
            case REAL:
            	{
                alt1 = 2;
                }
                break;
            case INTEGER:
            	{
                alt1 = 3;
                }
                break;
            case STRING:
            	{
                alt1 = 4;
                }
                break;
            case IDENT:
            	{
                int LA1_5 = input.LA(2);

                if ( (LA1_5 == EOF || (LA1_5 >= UNTIL && LA1_5 <= DO) || (LA1_5 >= THEN && LA1_5 <= OR) || LA1_5 == TTT || (LA1_5 >= ADD && LA1_5 <= DIV) || LA1_5 == COMPARE || (LA1_5 >= 44 && LA1_5 <= 45) || LA1_5 == 55) )
                {
                    alt1 = 6;
                }
                else if ( (LA1_5 == 43) )
                {
                    alt1 = 5;
                }
                else 
                {
                    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
                    NoViableAltException nvae_d1s5 =
                        new NoViableAltException("", 1, 5, input);

                    throw nvae_d1s5;
                }
                }
                break;
            	default:
            	    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            	    NoViableAltException nvae_d1s0 =
            	        new NoViableAltException("", 1, 0, input);

            	    throw nvae_d1s0;
            }

            switch (alt1) 
            {
                case 1 :
                    // MathExpr.g:92:3: '(' term ')'
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	char_literal1=(IToken)Match(input,43,FOLLOW_43_in_group790); if (state.failed) return retval;
                    	PushFollow(FOLLOW_term_in_group793);
                    	term2 = term();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, term2.Tree);
                    	char_literal3=(IToken)Match(input,44,FOLLOW_44_in_group795); if (state.failed) return retval;

                    }
                    break;
                case 2 :
                    // MathExpr.g:93:3: REAL
                    {
                    	REAL4=(IToken)Match(input,REAL,FOLLOW_REAL_in_group800); if (state.failed) return retval; 
                    	if ( (state.backtracking==0) ) stream_REAL.Add(REAL4);



                    	// AST REWRITE
                    	// elements:          REAL
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	if ( (state.backtracking==0) ) {
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (object)adaptor.GetNilNode();
                    	// 93:8: -> REAL[double.Parse($REAL.text, NFI)]
                    	{
                    	    adaptor.AddChild(root_0, new NumAstNode(REAL, double.Parse(((REAL4 != null) ? REAL4.Text : null), NFI)));

                    	}

                    	retval.Tree = root_0;retval.Tree = root_0;}
                    }
                    break;
                case 3 :
                    // MathExpr.g:94:3: INTEGER
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	INTEGER5=(IToken)Match(input,INTEGER,FOLLOW_INTEGER_in_group812); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{INTEGER5_tree = (object)adaptor.Create(INTEGER5);
                    		adaptor.AddChild(root_0, INTEGER5_tree);
                    	}

                    }
                    break;
                case 4 :
                    // MathExpr.g:95:3: STRING
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	STRING6=(IToken)Match(input,STRING,FOLLOW_STRING_in_group816); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{STRING6_tree = (object)adaptor.Create(STRING6);
                    		adaptor.AddChild(root_0, STRING6_tree);
                    	}

                    }
                    break;
                case 5 :
                    // MathExpr.g:96:3: func_call
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_func_call_in_group820);
                    	func_call7 = func_call();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, func_call7.Tree);

                    }
                    break;
                case 6 :
                    // MathExpr.g:97:3: IDENT
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	IDENT8=(IToken)Match(input,IDENT,FOLLOW_IDENT_in_group824); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{IDENT8_tree = (object)adaptor.Create(IDENT8);
                    		adaptor.AddChild(root_0, IDENT8_tree);
                    	}

                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 1, group_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "group"

    public class mult_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "mult"
    // MathExpr.g:101:1: mult : group ( ( MUL | DIV | DIV_INT | MOD_INT | AND ) group )* ;
    public MathExprParser.mult_return mult() // throws RecognitionException [1]
    {   
        MathExprParser.mult_return retval = new MathExprParser.mult_return();
        retval.Start = input.LT(1);
        int mult_StartIndex = input.Index();
        object root_0 = null;

        IToken set10 = null;
        MathExprParser.group_return group9 = default(MathExprParser.group_return);

        MathExprParser.group_return group11 = default(MathExprParser.group_return);


        object set10_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 2) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:101:5: ( group ( ( MUL | DIV | DIV_INT | MOD_INT | AND ) group )* )
            // MathExpr.g:101:7: group ( ( MUL | DIV | DIV_INT | MOD_INT | AND ) group )*
            {
            	root_0 = (object)adaptor.GetNilNode();

            	PushFollow(FOLLOW_group_in_mult833);
            	group9 = group();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, group9.Tree);
            	// MathExpr.g:101:13: ( ( MUL | DIV | DIV_INT | MOD_INT | AND ) group )*
            	do 
            	{
            	    int alt2 = 2;
            	    int LA2_0 = input.LA(1);

            	    if ( ((LA2_0 >= DIV_INT && LA2_0 <= AND) || (LA2_0 >= MUL && LA2_0 <= DIV)) )
            	    {
            	        alt2 = 1;
            	    }


            	    switch (alt2) 
            		{
            			case 1 :
            			    // MathExpr.g:101:15: ( MUL | DIV | DIV_INT | MOD_INT | AND ) group
            			    {
            			    	set10=(IToken)input.LT(1);
            			    	set10 = (IToken)input.LT(1);
            			    	if ( (input.LA(1) >= DIV_INT && input.LA(1) <= AND) || (input.LA(1) >= MUL && input.LA(1) <= DIV) ) 
            			    	{
            			    	    input.Consume();
            			    	    if ( state.backtracking == 0 ) root_0 = (object)adaptor.BecomeRoot((object)adaptor.Create(set10), root_0);
            			    	    state.errorRecovery = false;state.failed = false;
            			    	}
            			    	else 
            			    	{
            			    	    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            			    	    MismatchedSetException mse = new MismatchedSetException(null,input);
            			    	    throw mse;
            			    	}

            			    	PushFollow(FOLLOW_group_in_mult860);
            			    	group11 = group();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return retval;
            			    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, group11.Tree);

            			    }
            			    break;

            			default:
            			    goto loop2;
            	    }
            	} while (true);

            	loop2:
            		;	// Stops C# compiler whining that label 'loop2' has no statements


            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 2, mult_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "mult"

    public class add_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "add"
    // MathExpr.g:102:1: add : mult ( ( ADD | SUB | OR ) mult )* ;
    public MathExprParser.add_return add() // throws RecognitionException [1]
    {   
        MathExprParser.add_return retval = new MathExprParser.add_return();
        retval.Start = input.LT(1);
        int add_StartIndex = input.Index();
        object root_0 = null;

        IToken set13 = null;
        MathExprParser.mult_return mult12 = default(MathExprParser.mult_return);

        MathExprParser.mult_return mult14 = default(MathExprParser.mult_return);


        object set13_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 3) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:102:4: ( mult ( ( ADD | SUB | OR ) mult )* )
            // MathExpr.g:102:7: mult ( ( ADD | SUB | OR ) mult )*
            {
            	root_0 = (object)adaptor.GetNilNode();

            	PushFollow(FOLLOW_mult_in_add872);
            	mult12 = mult();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, mult12.Tree);
            	// MathExpr.g:102:13: ( ( ADD | SUB | OR ) mult )*
            	do 
            	{
            	    int alt3 = 2;
            	    int LA3_0 = input.LA(1);

            	    if ( (LA3_0 == OR || (LA3_0 >= ADD && LA3_0 <= SUB)) )
            	    {
            	        alt3 = 1;
            	    }


            	    switch (alt3) 
            		{
            			case 1 :
            			    // MathExpr.g:102:15: ( ADD | SUB | OR ) mult
            			    {
            			    	set13=(IToken)input.LT(1);
            			    	set13 = (IToken)input.LT(1);
            			    	if ( input.LA(1) == OR || (input.LA(1) >= ADD && input.LA(1) <= SUB) ) 
            			    	{
            			    	    input.Consume();
            			    	    if ( state.backtracking == 0 ) root_0 = (object)adaptor.BecomeRoot((object)adaptor.Create(set13), root_0);
            			    	    state.errorRecovery = false;state.failed = false;
            			    	}
            			    	else 
            			    	{
            			    	    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            			    	    MismatchedSetException mse = new MismatchedSetException(null,input);
            			    	    throw mse;
            			    	}

            			    	PushFollow(FOLLOW_mult_in_add892);
            			    	mult14 = mult();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return retval;
            			    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, mult14.Tree);

            			    }
            			    break;

            			default:
            			    goto loop3;
            	    }
            	} while (true);

            	loop3:
            		;	// Stops C# compiler whining that label 'loop3' has no statements


            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 3, add_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "add"

    public class logic_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "logic"
    // MathExpr.g:103:1: logic : add ( COMPARE add )* ;
    public MathExprParser.logic_return logic() // throws RecognitionException [1]
    {   
        MathExprParser.logic_return retval = new MathExprParser.logic_return();
        retval.Start = input.LT(1);
        int logic_StartIndex = input.Index();
        object root_0 = null;

        IToken COMPARE16 = null;
        MathExprParser.add_return add15 = default(MathExprParser.add_return);

        MathExprParser.add_return add17 = default(MathExprParser.add_return);


        object COMPARE16_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 4) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:103:6: ( add ( COMPARE add )* )
            // MathExpr.g:103:8: add ( COMPARE add )*
            {
            	root_0 = (object)adaptor.GetNilNode();

            	PushFollow(FOLLOW_add_in_logic904);
            	add15 = add();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, add15.Tree);
            	// MathExpr.g:103:12: ( COMPARE add )*
            	do 
            	{
            	    int alt4 = 2;
            	    int LA4_0 = input.LA(1);

            	    if ( (LA4_0 == COMPARE) )
            	    {
            	        alt4 = 1;
            	    }


            	    switch (alt4) 
            		{
            			case 1 :
            			    // MathExpr.g:103:14: COMPARE add
            			    {
            			    	COMPARE16=(IToken)Match(input,COMPARE,FOLLOW_COMPARE_in_logic908); if (state.failed) return retval;
            			    	if ( state.backtracking == 0 )
            			    	{COMPARE16_tree = (object)adaptor.Create(COMPARE16);
            			    		root_0 = (object)adaptor.BecomeRoot(COMPARE16_tree, root_0);
            			    	}
            			    	PushFollow(FOLLOW_add_in_logic911);
            			    	add17 = add();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return retval;
            			    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, add17.Tree);

            			    }
            			    break;

            			default:
            			    goto loop4;
            	    }
            	} while (true);

            	loop4:
            		;	// Stops C# compiler whining that label 'loop4' has no statements


            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 4, logic_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "logic"

    public class term_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "term"
    // MathExpr.g:105:1: term : logic ;
    public MathExprParser.term_return term() // throws RecognitionException [1]
    {   
        MathExprParser.term_return retval = new MathExprParser.term_return();
        retval.Start = input.LT(1);
        int term_StartIndex = input.Index();
        object root_0 = null;

        MathExprParser.logic_return logic18 = default(MathExprParser.logic_return);



        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 5) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:105:5: ( logic )
            // MathExpr.g:105:7: logic
            {
            	root_0 = (object)adaptor.GetNilNode();

            	PushFollow(FOLLOW_logic_in_term924);
            	logic18 = logic();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, logic18.Tree);

            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 5, term_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "term"

    public class params__return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "params_"
    // MathExpr.g:107:1: params_ : ( term ( ',' term )* )? ;
    public MathExprParser.params__return params_() // throws RecognitionException [1]
    {   
        MathExprParser.params__return retval = new MathExprParser.params__return();
        retval.Start = input.LT(1);
        int params__StartIndex = input.Index();
        object root_0 = null;

        IToken char_literal20 = null;
        MathExprParser.term_return term19 = default(MathExprParser.term_return);

        MathExprParser.term_return term21 = default(MathExprParser.term_return);


        object char_literal20_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 6) ) 
    	    {
    	    	return retval; 
    	    }
            // MathExpr.g:107:8: ( ( term ( ',' term )* )? )
            // MathExpr.g:107:10: ( term ( ',' term )* )?
            {
            	root_0 = (object)adaptor.GetNilNode();

            	// MathExpr.g:107:10: ( term ( ',' term )* )?
            	int alt6 = 2;
            	int LA6_0 = input.LA(1);

            	if ( ((LA6_0 >= INTEGER && LA6_0 <= IDENT) || LA6_0 == 43) )
            	{
            	    alt6 = 1;
            	}
            	switch (alt6) 
            	{
            	    case 1 :
            	        // MathExpr.g:107:12: term ( ',' term )*
            	        {
            	        	PushFollow(FOLLOW_term_in_params_935);
            	        	term19 = term();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return retval;
            	        	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, term19.Tree);
            	        	// MathExpr.g:107:17: ( ',' term )*
            	        	do 
            	        	{
            	        	    int alt5 = 2;
            	        	    int LA5_0 = input.LA(1);

            	        	    if ( (LA5_0 == 45) )
            	        	    {
            	        	        alt5 = 1;
            	        	    }


            	        	    switch (alt5) 
            	        		{
            	        			case 1 :
            	        			    // MathExpr.g:107:18: ',' term
            	        			    {
            	        			    	char_literal20=(IToken)Match(input,45,FOLLOW_45_in_params_938); if (state.failed) return retval;
            	        			    	PushFollow(FOLLOW_term_in_params_941);
            	        			    	term21 = term();
            	        			    	state.followingStackPointer--;
            	        			    	if (state.failed) return retval;
            	        			    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, term21.Tree);

            	        			    }
            	        			    break;

            	        			default:
            	        			    goto loop5;
            	        	    }
            	        	} while (true);

            	        	loop5:
            	        		;	// Stops C# compiler whining that label 'loop5' has no statements


            	        }
            	        break;

            	}


            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 6, params__StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "params_"

    public class func_call_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "func_call"
    // MathExpr.g:109:1: func_call : IDENT ( '(' params_ ')' ) -> ^( FUNC_CALL IDENT ^( PARAMS ( params_ )? ) ) ;
    public MathExprParser.func_call_return func_call() // throws RecognitionException [1]
    {   
        MathExprParser.func_call_return retval = new MathExprParser.func_call_return();
        retval.Start = input.LT(1);
        int func_call_StartIndex = input.Index();
        object root_0 = null;

        IToken IDENT22 = null;
        IToken char_literal23 = null;
        IToken char_literal25 = null;
        MathExprParser.params__return params_24 = default(MathExprParser.params__return);

